# system_integration

00._Assignments/01a._File_data_parsing/: me.yaml  parsing.py
00._Assignments/03a._Data_parsing_Server/node/: app.js  data.csv  data.xml  package.json
00._Assignments/03a._Data_parsing_Server/python/: data.json  main.py  pyproject.toml
00._Assignments/04a_Server_sent_events/node/: app.js  package-lock.json  package.json  readme
00._Assignments/04a_Server_sent_events/node/public/: index.html  (+1 more)
00._Assignments/05a._webhooks/node/: exposee.js  integrator.js  mydb.sqlite  package-lock.json  package.json  readme  readme.md
00._Assignments/05a._webhooks/python/: exposee.py  mydb.sqlite  pyproject.toml  readme.md
00._Assignments/_File_Formats/: me.txt
00._Assignments/_File_Translator/: main.py
01.Miscellaneous/: getGoogleHomepage.js  getGoogleHomepage.py  index.html  paymentiframe.html
02._Data_Files/: package-lock.json  package.json  parsing.js
03._Modules/html_no_modules/: index.html  index.js  myModule.js
03._Modules/node_commonjs_modules/: index.js  myModule.js  package-lock.json
06._Servers/pythonserver/: main.py  pyproject.toml
08._Server_To_Server/node/: app.js  package-lock.json  package.json
08._Server_To_Server/python/: main.py  pyproject.toml
10._Date/node/: index.html  index.js  package-lock.json
11._Short_Polling/node/: app.js
12._Long_Polling/node/: app.js  package-lock.json  package.json
13._Server-sent_Events/node/: app.js
13._Server-sent_Events/node/public/: index.html
13._Server-sent_Events/python/: main.py  pyproject.toml
