[tool.poetry]
name = "webhooks"
version = "0.1.0"
description = ""
authors = ["Lasse <lasseboegeskov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
requests = "^2.31.0"
uvicorn = "^0.28.1"
fastapi = "^0.110.0"
databases = "^0.9.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
